--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,15 @@
     rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   />
   <link href="https://fonts.googleapis.com/css?family=Halant|Montserrat:700|Satisfy" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;800&family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=JetBrains+Mono:wght@300;800&family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@600&family=Courgette&family=JetBrains+Mono:wght@300;800&family=Permanent+Marker&family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
   <title>Kelly's Portfolio</title>
   <style>
     * {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Raleway', sans-serif;
       margin: 0;
       overflow-x: hidden;
     }
